--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Ignore the local Python fundamentals practice directory
+python-fundamentals-main/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
