extende .gitignore with writing/.csv .txt

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ python-fundamentals-main/
 # Course data files for text-file practice (generated / not source)
 /19_Text_Files/02_Reading_Text_Files/*.txt
 /19_Text_Files/02_Reading_Text_Files/*.csv
+/19_Text_Files/03_Writing_Text_Files/*.txt
+/19_Text_Files/03_Writing_Text_Files/*.csv
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
